# limpet

./: Cargo.toml  LICENSE  README.md
src/: main.rs  sample.rs  scramble.rs  seq_sample.rs  seqio.rs  strip.rs
